Create route and client

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,11 @@
     ".vscode",
     ".vscode-insiders",
     ".gitignore",
+  ],
+  "cSpell.words": [
+    "datasource",
+    "postgresql",
+    "prisma",
+    "uuid"
   ]
 }
